src/components/home/home.scss
.clsHome {
  h1 {
    padding: 15px 5px;
  }

  .clsMain {
    div.clsItemtitle {
      /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#000000+1,000000+17,000000+73,000000+100&0.65+0,0+76,0+82,0+86 */
      background : -moz-linear-gradient(45deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.64) 1%, rgba(0, 0, 0, 0.5) 17%, rgba(0, 0, 0, 0.03) 73%, rgba(0, 0, 0, 0) 76%, rgba(0, 0, 0, 0) 82%, rgba(0, 0, 0, 0) 86%, rgba(0, 0, 0, 0) 100%);
      /* FF3.6-15 */
      background : -webkit-linear-gradient(45deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.64) 1%, rgba(0, 0, 0, 0.5) 17%, rgba(0, 0, 0, 0.03) 73%, rgba(0, 0, 0, 0) 76%, rgba(0, 0, 0, 0) 82%, rgba(0, 0, 0, 0) 86%, rgba(0, 0, 0, 0) 100%);
      /* Chrome10-25,Safari5.1-6 */
      background : linear-gradient(45deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.64) 1%, rgba(0, 0, 0, 0.5) 17%, rgba(0, 0, 0, 0.03) 73%, rgba(0, 0, 0, 0) 76%, rgba(0, 0, 0, 0) 82%, rgba(0, 0, 0, 0) 86%, rgba(0, 0, 0, 0) 100%);
      /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
      filter     : progid:DXImageTransform.Microsoft.gradient(startColorstr='#a6000000', endColorstr='#00000000', GradientType=1);
      /* IE6-9 fallback on horizontal gradient */
      color      : aqua;
      padding    : 5px;
      font-weight: bolder;
      font-size  : 18px;
    }

    .clsSlide {
      .clsSlideItem>div {
        position        : relative;
        background-color: black;
        height          : 400px;
        display         : flex;

        img {
          max-height: 100%;
          max-width : 100%;
          margin    : auto;
        }

        .title {
          margin          : 5px;
          color           : white;
          position        : absolute;
          bottom          : 0;
          left            : 0;
          background-color: #101214d8;
          border-radius   : 5px;
        }

        .price {
          color           : white;
          position        : absolute;
          top             : 0;
          left            : 0;
          padding         : 5px;
          background-color: #c0dcf55e;
          margin          : 5px;
          border          : 1px solid #4df5c2;
          border-radius   : 5px;
          box-shadow      : 0px 0px 10px 5px #f8f6f6;
        }
      }
    }

    .clsCard {
      // .clsPrice {
      //   font-weight     : bold;
      //   padding         : 5px;
      //   background-color: black;
      //   color           : white;
      //   margin          : 5px;
      //   position        : absolute;
      //   left            : 0;
      //   top             : 0;
      //   border          : 1px solid #4df5c2;
      //   border-radius   : 5px;
      //   box-shadow      : 0px 0px 10px 5px #f8f6f6;
      // }

      .card {
        .card-img-top {
          cursor: pointer;
        }

        .card-body {
          padding: 8px;

          .card-title {
            margin-bottom: 0;
          }
        }
      }
    }

  }
}

.clsAdv {
  >h4 {
    text-align: center;
  }

  .clsSlideItem div {
    background-color: black;
    height          : 400px;
    display         : flex;

    img {
      max-height: 100%;
      max-width : 100%;
      margin    : auto;
    }
  }

  iframe.video {
    width     : 100%;
    min-height: 350px;
  }


}

